k8s-ingress-controller/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingressroutetcptls
  namespace: sandbox
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`minikube`)
    kind: Rule
    services:
    - name: apim-proxy
      port: 443
  tls:
    domains:
      - main: minikube
    secretName: apim-proxy-cert-tls
    certResolver: default
    passthrough: true
